# holodex-cli

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  justfile  pyproject.toml
holodex/: __main__.py
holodex/net/: __init__.py
holodex/test/: rich_test.py
holodex/ui/: __init__.py
holodex/util/: time.py
holodex_cli/: __main__.py  cli.py
holodex_cli/net/: __init__.py  apikey.py
holodex_cli/ui/: __init__.py  styles.css
holodex_cli/util/: time.py
