[tool.poetry]
name = "holodex-cli"
version = "0.1.1"
description = "Holodex CLI for watching live streams"
authors = []
readme = "README.md"
packages = [
	{ include = "holodex", from = "." }
]

[tool.poetry.scripts]
holodex = "holodex.__main__:run"

[tool.poetry.dependencies]
python = ">=3.9, <=3.10"
requests = "^2.28.1"
textual = "^0.1.18"
streamlink = "^5.0.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
