[tool.poetry]
name = "holodex-cli"
version = "0.1.5"
description = "Holodex CLI for watching live streams"
authors = []
readme = "README.md"
packages = [
	{ include = "holodex_cli", from = "." }
]

[tool.poetry.scripts]
holodex = "holodex_cli.__main__:run"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
requests = "^2.28.1"
textual = "^0.27.0"
streamlink = "^5.0.1"
python-dateutil = "^2.8.2"
tomli = { version = "^2.0.1", python = "<3.11" }
rich-argparse = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
